[package]
name = "ssup2"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
log = { version = "0.4.27", features = ["kv"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
indexmap = { version = "2.9.0", features = ["serde"] } # Feature "serde" is crucial
thiserror = "2.0.12"
chrono = "0.4.40"

